# general_dagster_mlflow

./: .gitignore  Dockerfile  Readme.md  Readme_Commands.md  pyproject.toml
config_for_azure_blobstorage/: job_mlflow_training_config.yaml
experimental/: load_check_yaml.py  pandas_import.py  working_with_mlflow.py
extra_packages/: any_functions.py
mlruns/0/: meta.yaml
mlruns/1/: meta.yaml
mlruns/1/0915052f68f845ec90b1458c632ad54c/: meta.yaml
mlruns/1/0915052f68f845ec90b1458c632ad54c/metrics/: eval_kfold  eval_nmse  eval_r2  eval_score  train_score
mlruns/1/0915052f68f845ec90b1458c632ad54c/params/: model  steps
mlruns/1/0915052f68f845ec90b1458c632ad54c/tags/: mlflow.log-model.history  mlflow.source.name
mlruns/1/0a0fb02546254a7792a858552e07e667/: meta.yaml
mlruns/1/34514656ba034960b23d7787f579d698/: meta.yaml
mlruns/1/35bc96d4282f419da18924edc6a578f3/: meta.yaml
mlruns/1/71a3bb61e8354dcda945c30daf9ba009/: meta.yaml
mlruns/1/92ad62256eb142808f3c9750ac4d365c/: meta.yaml
mlruns/1/9e0c2846f4b74327bbbed11d59fa37cd/: meta.yaml
mlruns/1/9e8e7b669b1142a7a6ea49c801fa7a2c/: meta.yaml
mlruns/1/c55c35e772884bb89337848b0ac0a780/: meta.yaml
mlruns/1/ccea109e3b13422f826289f42ee32442/: meta.yaml
mlruns/1/d907b96c41874a0fb06fe1b37ae7831f/: meta.yaml
mlruns/1/da8fd1fcb4724e77816d8113387d5f76/: meta.yaml
pipelines/: repository.py
pipelines/general/: mlflow_functions.py  resources.py  utility.py
pipelines/job_standard_training/: config_loads.yaml  graph.py  job.py  job_mlflow_training_config.yaml  ops.py  trigger.py
(+108 files in other folders)
